# pppstat

./: AUTHORS  Changelog  Changelog-ua  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.ua  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  pppdstat.c  pppstat.conf
config/: Makefile.am  Makefile.in  pppstat.conf
cron/: Makefile.am  Makefile.in  pppstat
po/: LINGUAS  Makevars  POTFILES.in  pppstat.pot  ru.gmo  ru.po  uk.gmo  uk.po
src/: Makefile.am  Makefile.in  conf.h.in  filework.c  filework.h  main.c  main.h  output.c  output.h  stat.c  stat.h
